Make it possible to manage officers

--- a/app/views/officers/index.html.haml
+++ b/app/views/officers/index.html.haml
@@ -1,1 +1,10 @@
-Officer index
+%h1 Officers
+%ul
+  - @officers.each do |officer|
+    %li
+      = link_to officer do
+        = officer.first_name
+        = officer.last_name
+
+= link_to new_officer_path do
+  Add officer
