--- a/app/views/officers/show.html.haml
+++ b/app/views/officers/show.html.haml
@@ -11,3 +11,14 @@ Serial number:
 
 = link_to [:edit, @officer] do
   Edit
+
+%h2 Incidents
+
+- @officer.incidents.each do |incident|
+  = incident.description
+  = l incident.datetime, format: :long
+  = link_to [:edit, incident] do
+    Edit incident
+
+= link_to new_incident_path(incident: {officer_id: @officer.id}) do
+  Add incident
