--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,7 @@
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
     = javascript_importmap_tags
   %body
-    = render HeaderComponent.new
+    = render partial: 'application/header'
 
     %p.notice= notice
     %p.alert= alert
