--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,4 +25,6 @@
     - else
       = link_to new_user_session_path do
         Sign in
+    = render partial: 'application/footer'
+
     %script{:crossorigin => "anonymous", :integrity => "sha256-bEODhV4qVg5PIbshplXC76WhJoADh8mVW2WkWQQbYFg=", :src => "https://cdn.jsdelivr.net/npm/uswds@2.12.2/dist/js/uswds.js"}
