--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,2 +1,7 @@
-%h1 Pages#home
-%p Find me in app/views/pages/home.html.haml
+%section.grid-container.usa-section
+  .grid-row.grid-gap
+    .tablet:grid-col-4
+      %h2.font-heading-xl.margin-top-0.tablet:margin-bottom-0 Documenting the bad apples
+    .tablet:grid-col-8.usa-prose
+      %p The tagline should inspire confidence and interest, focusing on the value that your overall approach offers to your audience. Use a heading typeface and keep your tagline to just a few words, and don’t confuse or mystify.
+      %p Use the right side of the grid to explain the tagline a bit more. What are your goals? How do you do your work? Write in the present tense, and stay brief here. People who are interested can find details on internal pages.
