Style incident list

--- a/app/views/officers/index.html.haml
+++ b/app/views/officers/index.html.haml
@@ -1,4 +1,6 @@
 %section.grid-container.usa-section
+  %h1 Officers
+
   = render UswdsComponents::TableComponent.new(striped: true) do
     %caption Complete list of officers
     %thead
