--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,14 +19,15 @@
     %main#main-content
       = yield
 
-    - if current_user.present?
-      Signed in as
-      = current_user.email
-      = button_to destroy_user_session_path, method: :delete do
-        Sign out
-    - else
-      = link_to new_user_session_path do
-        Sign in
+    - unless devise_controller?
+      - if current_user.present?
+        Signed in as
+        = current_user.email
+        = button_to destroy_user_session_path, method: :delete do
+          Sign out
+      - else
+        = link_to new_user_session_path do
+          Sign in
     = render partial: 'application/footer'
 
     %script{:crossorigin => "anonymous", :integrity => "sha256-bEODhV4qVg5PIbshplXC76WhJoADh8mVW2WkWQQbYFg=", :src => "https://cdn.jsdelivr.net/npm/uswds@2.12.2/dist/js/uswds.js"}
