Style incident form

--- a/app/views/incidents/edit.html.haml
+++ b/app/views/incidents/edit.html.haml
@@ -1,11 +1,4 @@
-= form_for @incident do |f|
-  = f.label :description
-  = f.text_field :description
-
-  = f.label :datetime
-  = f.text_field :datetime
-
-  = f.submit
+= render 'form', locals: { incident: @incident }
 
 = button_to @incident, method: :delete do
   Delete
