Add external documents to incidents

--- a/app/views/incidents/_form.html.haml
+++ b/app/views/incidents/_form.html.haml
@@ -7,6 +7,8 @@
         - else
           New Incident
 
+      = f.hidden_field :officer_id
+
       = f.label :description, class: 'usa-label'
       = f.text_area :description, class: 'usa-textarea'
 
