--- a/app/views/incidents/new.html.haml
+++ b/app/views/incidents/new.html.haml
@@ -1,10 +1,1 @@
-= form_for @incident do |f|
-  = f.hidden_field :officer_id
-
-  = f.label :description
-  = f.text_field :description
-
-  = f.label :datetime
-  = f.text_field :datetime
-
-  = f.submit
+= render 'form', locals: { incident: @incident }
