--- a/app/views/incidents/_form.html.haml
+++ b/app/views/incidents/_form.html.haml
@@ -9,6 +9,9 @@
 
       = f.hidden_field :officer_id
 
+      = f.label :heading, class: 'usa-label'
+      = f.text_field :heading, class: 'usa-input'
+
       = f.label :description, class: 'usa-label'
       = f.text_area :description, class: 'usa-textarea'
 
