--- a/app/views/incidents/_incident.html.haml
+++ b/app/views/incidents/_incident.html.haml
@@ -15,6 +15,8 @@
 
     %p= document.description
 
+    = render 'youtube_embed', embed_src: document.youtube_embed_src
+
     %p= link_to "Edit external document", [:edit, document]
 
   - if policy(incident).edit?
