--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,13 +1,13 @@
 !!!
 %html
   %head
-    %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
+    %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}
     %title BadApples
-    %meta{:content => "width=device-width,initial-scale=1", :name => "viewport"}/
+    %meta{:content => "width=device-width,initial-scale=1", :name => "viewport"}
     = csrf_meta_tags
     = csp_meta_tag
-    %link{:crossorigin => "anonymous", :href => "https://cdn.jsdelivr.net/npm/uswds@2.12.2/dist/css/uswds.min.css", :integrity => "sha256-w12xmKFX1Bd0luZZr1hehpfX9EgyX9C6QTaKTZGDduE=", :rel => "stylesheet"}/
-    %script{:crossorigin => "anonymous", :integrity => "sha256-9lfV7p6SwtVd8y52fTGAaNFu+rQGUEYODsI5fDErBEI=", :src => "https://cdn.jsdelivr.net/npm/uswds@2.12.2/dist/js/uswds-init.js"}
+    %link{rel: :stylesheet, href: 'https://cdn.jsdelivr.net/npm/uswds@2.13.0/dist/css/uswds.min.css', integrity: 'sha256-6ZoI2WgL6VJKEfe5qQALzkObY0bqZvN/wAgkjgFtD/o=', crossorigin: :anonymous}
+    %script{src: 'https://cdn.jsdelivr.net/npm/uswds@2.13.0/dist/js/uswds-init.min.js', integrity: 'sha256-s8ivtssrvlThzW9kP7IobVBTgrj2tXanipFmUrGRadE=', crossorigin: :anonymous}
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
     = javascript_importmap_tags
   %body
@@ -22,4 +22,4 @@
     = render 'footer'
     = render 'user_info' unless devise_controller?
 
-    %script{:crossorigin => "anonymous", :integrity => "sha256-bEODhV4qVg5PIbshplXC76WhJoADh8mVW2WkWQQbYFg=", :src => "https://cdn.jsdelivr.net/npm/uswds@2.12.2/dist/js/uswds.js"}
+    %script{src: 'https://cdn.jsdelivr.net/npm/uswds@2.13.0/dist/js/uswds.min.js', integrity: 'sha256-wFSqIde7dSXUsICyl/9wZcm9Cer7aPhCloW7nMjsvPs=', crossorigin: :anonymous}
