--- a/app/views/officers/_form.html.haml
+++ b/app/views/officers/_form.html.haml
@@ -10,8 +10,14 @@
       = f.label :first_name, class: 'usa-label'
       = f.text_field :first_name, class: 'usa-input'
 
+      = f.label :middle_name, class: 'usa-label'
+      = f.text_field :middle_name, class: 'usa-input'
+
       = f.label :last_name, class: 'usa-label'
       = f.text_field :last_name, class: 'usa-input'
+
+      = f.label :suffix, class: 'usa-label'
+      = f.text_field :suffix, class: 'usa-input'
 
       = f.label :badge_number, class: 'usa-label'
       = f.text_field :badge_number, class: 'usa-input'
