Simplify render call

--- a/app/views/layouts/component_preview.html.haml
+++ b/app/views/layouts/component_preview.html.haml
@@ -2,7 +2,7 @@
   .grid-container
     .grid-row
       .tablet:grid-col-auto.margin-y-2.margin-right-3
-        = render partial: 'preview_menu', locals: {previews: ViewComponent::Preview.all}
+        = render 'preview_menu', previews: ViewComponent::Preview.all
 
       .tablet:grid-col-fill
         %h1= @preview.preview_name.camelize if @preview
