Hide edit link unless user can edit

--- a/app/views/incidents/_incident.html.haml
+++ b/app/views/incidents/_incident.html.haml
@@ -17,7 +17,8 @@
 
     = render 'youtube_embed', embed_src: document.youtube_embed_src
 
-    %p= link_to "Edit external document", [:edit, document]
+    - if policy(document).edit?
+      %p= link_to "Edit external document", [:edit, document]
 
   - if policy(incident).edit?
     = link_to new_external_document_path(external_document: {incident_id: incident.id}) do
