--- a/app/views/search_results/index.html.haml
+++ b/app/views/search_results/index.html.haml
@@ -2,12 +2,7 @@
 
   %h1 Search for Officers
 
-  %form.usa-search.usa-search--big{action: search_path, role: :search}
-    %label.usa-sr-only{for: :query} Search
-    %input#query.usa-input{name: :q, type: :search, value: params[:q]}
-    %button.usa-button{type: :submit}
-      %span.usa-search__submit-text Search
-      %img.usa-search__submit-icon{alt: "Search", src: "https://cdn.jsdelivr.net/npm/uswds@2.13.0/src/img/usa-icons-bg/search--white.svg"}
+  = render UswdsComponents::SearchComponent.new(form_options: { url: search_path, method: :get }, size: :big, submit_icon: "https://cdn.jsdelivr.net/npm/uswds@2.13.0/src/img/usa-icons-bg/search--white.svg")
 
   %h2 Results
 
