--- a/app/views/incidents/edit.html.haml
+++ b/app/views/incidents/edit.html.haml
@@ -1,4 +1,20 @@
-= render 'form', locals: { incident: @incident }
+.grid-container
+  = render 'form', locals: { incident: @incident }
 
-= button_to @incident, method: :delete do
-  Delete
+  %ul
+    - @incident.external_documents.each do |document|
+      %li
+        = link_to document.url do
+          = document.name
+        = document.description
+        = link_to edit_external_document_path(document) do
+          Edit external document
+
+  = link_to new_incident_incident_role_path(incident_id: @incident.id) do
+    Add officer
+
+  = link_to new_external_document_path(external_document: {incident_id: @incident.id}) do
+    Add document
+
+  = button_to @incident, method: :delete do
+    Delete
