--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,14 +1,14 @@
 !!!
 %html
   %head
-    %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}
+    %meta{ content: 'text/html; charset=UTF-8', 'http-equiv' => 'Content-Type' }
     %title BadApples
-    %meta{:content => "width=device-width,initial-scale=1", :name => "viewport"}
+    %meta{ content: 'width=device-width,initial-scale=1', name: 'viewport' }
     = csrf_meta_tags
     = csp_meta_tag
-    %link{rel: :stylesheet, href: 'https://cdn.jsdelivr.net/npm/uswds@2.13.0/dist/css/uswds.min.css', integrity: 'sha256-6ZoI2WgL6VJKEfe5qQALzkObY0bqZvN/wAgkjgFtD/o=', crossorigin: :anonymous}
-    %script{src: 'https://cdn.jsdelivr.net/npm/uswds@2.13.0/dist/js/uswds-init.min.js', integrity: 'sha256-s8ivtssrvlThzW9kP7IobVBTgrj2tXanipFmUrGRadE=', crossorigin: :anonymous}
-    = stylesheet_link_tag "application", "data-turbo-track": "reload"
+    %link{ rel: :stylesheet, href: 'https://cdn.jsdelivr.net/npm/uswds@2.13.0/dist/css/uswds.min.css', integrity: 'sha256-6ZoI2WgL6VJKEfe5qQALzkObY0bqZvN/wAgkjgFtD/o=', crossorigin: :anonymous }
+    %script{ src: 'https://cdn.jsdelivr.net/npm/uswds@2.13.0/dist/js/uswds-init.min.js', integrity: 'sha256-s8ivtssrvlThzW9kP7IobVBTgrj2tXanipFmUrGRadE=', crossorigin: :anonymous }
+    = stylesheet_link_tag 'application', 'data-turbo-track': 'reload'
     = javascript_importmap_tags
   %body
     = render partial: 'application/header'
@@ -20,4 +20,4 @@
     = render 'application/footer'
     = render 'application/user_info' unless devise_controller?
 
-    %script{src: 'https://cdn.jsdelivr.net/npm/uswds@2.13.0/dist/js/uswds.min.js', integrity: 'sha256-wFSqIde7dSXUsICyl/9wZcm9Cer7aPhCloW7nMjsvPs=', crossorigin: :anonymous}
+    %script{ src: 'https://cdn.jsdelivr.net/npm/uswds@2.13.0/dist/js/uswds.min.js', integrity: 'sha256-wFSqIde7dSXUsICyl/9wZcm9Cer7aPhCloW7nMjsvPs=', crossorigin: :anonymous }
