--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -3,4 +3,4 @@
 
   - header.primary_item(title: 'Complete list', href: officers_path)
 
-  = render UswdsComponents::SearchComponent.new(form_options: { url: search_path, method: :get }, size: :small, submit_icon: "https://cdn.jsdelivr.net/npm/uswds@2.13.0/src/img/usa-icons-bg/search--white.svg")
+  = render UswdsComponents::SearchComponent.new(form_options: { url: search_path, method: :get }, size: :small, submit_icon: 'https://cdn.jsdelivr.net/npm/uswds@2.13.0/src/img/usa-icons-bg/search--white.svg')
