--- a/app/views/layouts/component_preview.html.haml
+++ b/app/views/layouts/component_preview.html.haml
@@ -8,4 +8,4 @@
         %h1= @preview.preview_name.camelize if @preview
         = yield
 
-= render template: "layouts/application"
+= render template: 'layouts/application'
