Add incidents and documents to search results

--- a/app/views/search_results/index.html.haml
+++ b/app/views/search_results/index.html.haml
@@ -1,25 +1,9 @@
 %section.grid-container.usa-section
 
-  %h1 Search for Officers
+  %h1 Search
 
   = render UswdsComponents::SearchComponent.new(form_options: { url: search_path, method: :get }, size: :big, submit_icon: 'https://cdn.jsdelivr.net/npm/uswds@2.13.0/src/img/usa-icons-bg/search--white.svg')
 
   %h2 Results
 
-  = render UswdsComponents::TableComponent.new(striped: true) do
-    %caption Officers matching "#{params[:q]}"
-    %thead
-      %tr
-        %th{ scope: :col } Name
-        %th{ scope: :col } Badge no.
-        %th{ scope: :col } Serial no.
-        %th{ scope: :col } Incidents
-    %tbody
-      - @search_results.each do |officer|
-        %tr
-          %th{ scope: :row }
-            = link_to officer do
-              = officer.name
-          %td= officer.badge_number.presence || 'Unknown'
-          %td= officer.serial_number.presence || 'Unknown'
-          %td= officer.incidents.size
+  = render @search_results
