Rename external document to document

--- a/app/views/documents/_form.html.haml
+++ b/app/views/documents/_form.html.haml
@@ -1,11 +1,11 @@
 .grid-container
   %section.usa-section
-    = form_for external_document, html: { class: 'usa-form usa-form--large margin-x-auto' } do |f|
+    = form_for document, html: { class: 'usa-form usa-form--large margin-x-auto' } do |f|
       %h1
-        - if external_document.persisted?
-          Edit External Document
+        - if document.persisted?
+          Edit Document
         - else
-          New External Document
+          New Document
 
       = f.hidden_field :incident_id
 
