--- a/app/views/incidents/_incident.html.haml
+++ b/app/views/incidents/_incident.html.haml
@@ -8,9 +8,9 @@
       = link_to [:edit, incident] do
         Edit incident
 
-  %h2 External documents
+  %h2 Documents
 
-  - incident.external_documents.each do |document|
+  - incident.documents.each do |document|
     %h3= link_to document.name, document.url
 
     %p= document.description
@@ -18,8 +18,8 @@
     = render 'youtube_embed', embed_src: document.youtube_embed_src
 
     - if policy(document).edit?
-      %p= link_to 'Edit external document', [:edit, document]
+      %p= link_to 'Edit document', [:edit, document]
 
   - if policy(incident).edit?
-    = link_to new_external_document_path(external_document: { incident_id: incident.id }) do
-      Add external document
+    = link_to new_document_path(document: { incident_id: incident.id }) do
+      Add document
