--- a/app/views/officers/show.html.haml
+++ b/app/views/officers/show.html.haml
@@ -11,6 +11,25 @@
       Serial no:
       = @officer.serial_number.presence || 'Unknown'
 
+    %ul
+      - @officer.positions.each do |position|
+        %li
+          = position.agency_name
+          - if position.serial_number?
+            (Serial: #{position.serial_number})
+          - if position.badge_number?
+            (Badge: #{position.badge_number})
+
+          - if policy(position).edit?
+            = link_to [:edit, @officer, position] do
+              Edit position
+
+
+    - if policy(Position).new?
+      %p
+        = link_to [:new, @officer, :position] do
+          Add Position
+
     - if policy(@officer).edit?
       %p
         = link_to [:edit, @officer] do
