--- a/app/views/roles/_form.html.haml
+++ b/app/views/roles/_form.html.haml
@@ -9,14 +9,9 @@
     .usa-form-group
       = f.label :officer_id, class: 'usa-label'
       .usa-combo-box
-        = f.select :officer_id, Officer.select_choices, { class: 'usa-select' }, required: true
-    .usa-form-group
-      .usa-checkbox
-        = check_box_tag :new_officer, false, false, class: 'usa-checkbox__input', name: :new_officer, data: { 'role-form-target' => 'newOfficerToggle', action: 'change->role-form#toggleNewOfficer' }
-        %label.usa-checkbox__label{ for: :new_officer }
-          New Officer
+        = f.select :officer_id, Officer.select_choices, { class: 'usa-select' }, required: true, data: { 'role-form-target' => 'officerSelect', action: 'change->role-form#selectOfficer' }
 
-    .usa-form-group{ data: { 'role-form-target' => 'newOfficerFields' } }
+    .usa-form-group.display-none{ data: { 'role-form-target' => 'newOfficerFields' } }
       = f.fields_for :officer do |officer_form|
         .usa-form-group
           = officer_form.label :first_name
