Add link to agency list

--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -2,5 +2,6 @@
   - header.logo(href: root_path, title: 'Bad Apples')
 
   - header.primary_item(title: 'All officers', href: officers_path)
+  - header.primary_item(title: 'All agencies', href: agencies_path)
 
   = render UswdsComponents::SearchComponent.new(form_options: { url: search_path, method: :get }, size: :small, submit_icon: 'https://cdn.jsdelivr.net/npm/uswds@2.13.0/src/img/usa-icons-bg/search--white.svg')
