Use borderless tables

--- a/app/views/agencies/index.html.haml
+++ b/app/views/agencies/index.html.haml
@@ -1,7 +1,7 @@
 %section.grid-container.usa-section
   %h1 Agencies
 
-  = render UswdsComponents::TableComponent.new(striped: true) do
+  = render UswdsComponents::TableComponent.new(striped: true, borderless: true) do
     %caption Complete list of agencies
     %thead
       %tr
