Paginate search results

--- a/app/views/search_results/index.html.haml
+++ b/app/views/search_results/index.html.haml
@@ -13,3 +13,5 @@
     %tbody
       - @search_results.each do |result|
         = render result
+
+  = pagy_nav(@pagy).html_safe # rubocop:disable Rails/OutputSafety
