Use USWDS pagination component

--- a/app/views/agencies/index.html.haml
+++ b/app/views/agencies/index.html.haml
@@ -13,4 +13,4 @@
     = link_to new_agency_path do
       Add agency
 
-  = pagy_nav(@pagy).html_safe # rubocop:disable Rails/OutputSafety
+  = render partial: 'pagy', object: @pagy
