--- a/app/views/officers/index.html.haml
+++ b/app/views/officers/index.html.haml
@@ -14,4 +14,4 @@
     = link_to new_officer_path do
       Add officer
 
-  = pagy_nav(@pagy).html_safe # rubocop:disable Rails/OutputSafety
+  = render partial: 'pagy', object: @pagy
