--- a/app/views/search_results/index.html.haml
+++ b/app/views/search_results/index.html.haml
@@ -14,4 +14,4 @@
       - @search_results.each do |result|
         = render result
 
-  = pagy_nav(@pagy).html_safe # rubocop:disable Rails/OutputSafety
+  = render partial: 'pagy', object: @pagy
