Permit perameters in view

--- a/app/views/search_results/_pagy.html.haml
+++ b/app/views/search_results/_pagy.html.haml
@@ -1,17 +1,19 @@
+- query = params.permit(:q)
+
 = render UswdsComponents::PaginationComponent.new do
   - if pagy.prev
-    = render UswdsComponents::PaginationComponent::Previous.new(url: url_for(page: pagy.prev, q: params[:q]))
+    = render UswdsComponents::PaginationComponent::Previous.new(url: url_for(query.merge(page: pagy.prev)))
 
   - pagy.series.each do |item|
     - case item
     - when Integer
-      = render UswdsComponents::PaginationComponent::Page.new(url: url_for(page: item, q: params[:q]), index: item)
+      = render UswdsComponents::PaginationComponent::Page.new(url: url_for(query.merge(page: item)), index: item)
 
     - when String
-      = render UswdsComponents::PaginationComponent::Page.new(url: url_for(page: item, q: params[:q]), index: item, current: true)
+      = render UswdsComponents::PaginationComponent::Page.new(url: url_for(query.merge(page: item)), index: item, current: true)
 
     - when :gap
       = render UswdsComponents::PaginationComponent::Overflow.new
 
   - if pagy.next
-    = render UswdsComponents::PaginationComponent::Next.new(url: url_for(page: pagy.next, q: params[:q]))
+    = render UswdsComponents::PaginationComponent::Next.new(url: url_for(query.merge(page: pagy.next)))
