Remove pg_search

--- a/app/views/search_results/index.html.haml
+++ b/app/views/search_results/index.html.haml
@@ -6,7 +6,13 @@
 
   %h2 Results
 
-  - @search_results.each do |result|
-    = render result
+  = render UswdsComponents::TableComponent.new(striped: true, borderless: true) do
+    %thead
+      %tr
+        %th{ scope: :col } Name
+    %tbody
+      - @search_results.each do |result|
+        = render result
+
 
   = render SearchPaginationComponent.new(pagy: @pagy, query: params[:q])
