--- a/app/views/lapd_headshots/index.html.haml
+++ b/app/views/lapd_headshots/index.html.haml
@@ -3,7 +3,10 @@
 
   - @lapd_headshots.each do |headshot|
     %section
-      %h2= headshot.file_name
+      %h2
+        = link_to headshot do
+          = headshot.file_name
+
 
       %img{ src: headshot.file_path }
     %hr
