Use component in partial

--- a/app/views/lapd_headshots/_lapd_headshot.html.haml
+++ b/app/views/lapd_headshots/_lapd_headshot.html.haml
@@ -1,4 +1,1 @@
-%tr
-  %th{ scope: :row }
-    = link_to lapd_headshot do
-      = lapd_headshot.file_name
+= render LapdHeadshotComponent.new(lapd_headshot: lapd_headshot)
